# zero_to_prod

./: .env  Cargo.toml  Dockerfile  docker-compose.yml  render.yaml
.github/workflows/: audit.yaml  general.yaml
.sqlx/: query-1c1e85c331f9217e02007441deddd7829f94ffe7b2eb3d84c8f86ec26bb0112e.json  query-34245a4e4c221a46ffd9665a303d99a7c7e4014ff8fbf07558aa5aa5391c0de5.json  query-3652d07a5e9d96fa4e17d4814b41ad0ca9ee97110595cf3f91e02f2ece380ca6.json  query-5ab0488c993f6ef08608fe8f1d1cf816657f47d4d233f4bd42c22669caf35da8.json  query-73d07a347c5f5cbf56e9da52e9339020f54c086382a37541409dac9c2d2776dc.json  query-958418b778c557f3d6029fc002a315a9b799e3906b07ed67ab0274db7bd105af.json  query-b31f4c6861a56ab5c39b024321380b42abd77f46559a9cf961afefdf5d713b56.json  query-c13965d2443a0865ca12c1d74adcaa492626eebd123add23e821a8ff1011b66a.json  query-c72e0cd2a4770da5705b904c24aef6c8726604ce9e11743d19b818405d36e828.json
configuration/: base.yaml  local.yaml  production.yaml
init-scripts/: 01-init_db.sql  initialization.md
migrations/: 20240912045024_create_subscriptions_table.sql  20240912053629_add_created_at_column_to_subscriptions_table.sql  20241005163837_add_status_to_subscriptions.sql  20241005224603_make_status_not_null_in_subscriptions.sql  20241005225516_create_subscription_tokens_table.sql  20241023151335_create_users_table.sql  20241023162649_rename_password_column.sql  20241024030952_add_salt_to_users.sql  20241024034341_remove_salt_from_users.sql  20241027095058_seed_user.sql  20241028082109_create_idempotency_table.sql  20241030142924_relax_null_checks_on_idempotency.sql  20241105070300_create_newsletter_issues_table.sql  20241105072913_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: health_check.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  mod.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs  test_user.rs
