[package]
name = "zero_to_prod"
version = "0.1.0"
authors = ['Alexander Nitiola <cre8tor.alexander@gmail.com>']
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero_to_prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt", "macros"] }
config = "0.14"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
unicode-segmentation = "1.12"

serde = { version = "1", features = ["derive"]}
serde-aux = "4"

# Gold Bag ->
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-actix-web = "0.7"

redact = { version = "0.1", features = ["serde"] }
rand = { version = "0.8", features = ["std_rng"] }
validator = "0.18"

[dependencies.reqwest]
version = "0.12"
default-features = false
# We need the `json` feature flag to serialize/deserialize JSON payloads
features = ["json", "rustls-tls"]

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls", # rustls as TLS backend
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1"
fake = "2.10"
wiremock = "0.6"
claims = "0.7"
serde_json = "1"
linkify = "0.10"
